# codebase-learning-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  clp.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api/auth/signup/: route.ts
apps/web/src/app/api/repos/import/: route.ts
apps/web/src/app/api/settings/: route.ts
apps/web/src/app/auth/signin/: page.tsx
apps/web/src/app/auth/signup/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/dashboard/[repoId]/: page.tsx
apps/web/src/app/interview/[repoId]/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/repos/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/study/[repoId]/: page.tsx
apps/web/src/app/tutor/[repoId]/: page.tsx
apps/web/src/components/layout/: Navbar.tsx  Providers.tsx
apps/web/src/hooks/: useRepoImport.ts
apps/web/src/lib/: auth.ts  rate-limiter.ts  session.ts  usage.ts
apps/worker/: pyproject.toml  requirements.txt
apps/worker/src/: __init__.py  celery_app.py  config.py  polling_worker.py
apps/worker/src/analysis/: __init__.py  analyzer.py
apps/worker/src/embeddings/: __init__.py  provider.py
apps/worker/src/generation/: __init__.py  engine.py
apps/worker/src/ingestion/: __init__.py  pipeline.py
apps/worker/src/tasks/: __init__.py  indexing.py
infrastructure/docker/: Dockerfile.web  Dockerfile.worker
(+20 files in other folders)
