[project]
name = "codebase-learning-worker"
version = "0.1.0"
description = "Python worker service for codebase analysis, embeddings, and content generation"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "openai>=1.20.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "tree-sitter>=0.22.0",
    "gitpython>=3.1.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
